--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server:dev": "nodemon ./src/server/index.js",
-    "json-server": "json-server --watch ./src/json-server-db.json --port 5010"
+    "server": "concurrently npm:server:*",
+    "server:apollo": "nodemon ./src/server/index.js",
+    "server:json": "json-server --watch ./src/json-server-db.json --port 5010"
   },
   "nodemonConfig": {
     "ignore": [
@@ -22,6 +23,7 @@
     "json-server": "^0.17.0"
   },
   "devDependencies": {
+    "concurrently": "^7.2.1",
     "nodemon": "^2.0.16"
   }
 }
