--- a/quiz-demo-app/server/package.json
+++ b/quiz-demo-app/server/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "apollo-server": "^3.8.2",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
     "graphql": "^16.5.0",
     "json-server": "^0.17.0",
     "lodash": "^4.17.21",
