--- a/quiz-demo-app/client/package.json
+++ b/quiz-demo-app/client/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "clsx": "^1.1.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
-    "@emotion/babel-plugin": "^11.9.2"
+    "@emotion/babel-plugin": "^11.9.2",
+    "@types/lodash": "^4.14.182"
   }
 }
