--- a/quiz-demo-app/client/package.json
+++ b/quiz-demo-app/client/package.json
@@ -17,6 +17,8 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "clsx": "^1.1.1",
+    "formik": "^2.2.9",
+    "formik-mui": "^5.0.0-alpha.0",
     "lodash": "^4.17.21",
     "material-ui-popup-state": "^3.1.1",
     "react": "^17.0.2",
@@ -24,7 +26,9 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.3",
-    "web-vitals": "^2.1.4"
+    "uuid": "^8.3.2",
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "craco start",
@@ -50,6 +54,8 @@
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.9.2",
-    "@types/lodash": "^4.14.182"
+    "@types/lodash": "^4.14.182",
+    "express": "^4.18.1",
+    "serve": "^13.0.4"
   }
 }
