--- a/quiz-demo-app/client/package.json
+++ b/quiz-demo-app/client/package.json
@@ -4,6 +4,7 @@
   "author": "Alexander Podoprigora",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "@craco/craco": "^6.4.3",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
@@ -19,6 +20,7 @@
     "clsx": "^1.1.1",
     "formik": "^2.2.9",
     "formik-mui": "^5.0.0-alpha.0",
+    "graphql": "^16.5.0",
     "lodash": "^4.17.21",
     "material-ui-popup-state": "^3.1.1",
     "react": "^17.0.2",
