--- a/quiz-demo-app/server/package.json
+++ b/quiz-demo-app/server/package.json
@@ -17,6 +17,9 @@
     "delay": 2500
   },
   "dependencies": {
+    "@graphql-tools/graphql-file-loader": "^7.4.0",
+    "@graphql-tools/load": "^7.7.0",
+    "@graphql-tools/schema": "^8.5.0",
     "apollo-server": "^3.8.2",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
