--- a/quiz-demo-app/server/package.json
+++ b/quiz-demo-app/server/package.json
@@ -7,7 +7,7 @@
   "main": "index.js",
   "scripts": {
     "server": "concurrently npm:server:*",
-    "server:apollo": "nodemon ./src/server.js",
+    "server:apollo": "ts-node-dev --respawn ./src/server.ts",
     "server:json": "json-server ./src/json-server-db.json --port 5021"
   },
   "nodemonConfig": {
@@ -29,7 +29,21 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
+    "@types/node": "^18.0.4",
+    "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
     "concurrently": "^7.2.1",
-    "nodemon": "^2.0.16"
+    "eslint": "^8.19.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "nodemon": "^2.0.16",
+    "rimraf": "^3.0.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.7.4"
   }
 }
