--- a/quiz-demo-app/client/package.json
+++ b/quiz-demo-app/client/package.json
@@ -34,7 +34,8 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "craco build"
+    "build": "craco build",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "eslintConfig": {
     "extends": [
@@ -56,9 +57,14 @@
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.9.2",
+    "@graphql-codegen/cli": "2.8.1",
     "@types/lodash": "^4.14.182",
     "express": "^4.18.1",
     "serve": "^13.0.4",
-    "utility-types": "^3.10.0"
+    "utility-types": "^3.10.0",
+    "@graphql-codegen/typescript": "2.7.1",
+    "@graphql-codegen/typescript-operations": "2.5.1",
+    "@graphql-codegen/typescript-react-apollo": "3.3.1",
+    "@graphql-codegen/introspection": "2.2.0"
   }
 }
